added options to results page

--- a/index.html
+++ b/index.html
@@ -372,6 +372,17 @@
             <div class="col s3" id=side-panel>
               <h5>Options</h5>
               <hr>
+              <ul class="collapsible">
+                <li>
+                  <div class="collapsible-header veggies"><i class="material-icons">spa</i>Vegetarian</div>
+                </li>
+                <li>
+                  <div class="collapsible-header meats"><i class="material-icons">restaurant_menu</i>Meat</div>
+                </li>
+                <li>
+                  <div class="collapsible-header grains"><i class="material-icons">grain</i>Calories 100-500</div>
+                </li>
+              </ul>
             </div>
             <div class="col s9" id="results-panel">
               <h5>Search Results for <span id="typed-result"></span></h5>
